update user passwordhasing & email validation

--- a/templates/loginform.html
+++ b/templates/loginform.html
@@ -4,7 +4,7 @@
   <title>Vantaa</title>
 </head>
 <body>
-<form action="/admin" method="GET">
+<form action="/login" method="post">
   <input name="name" type="text" value=""/>
   <input name="password" type="password" value=""/>
   <input type="submit" value="Login"/>
